# ags_proj

./: .gitignore  README.md  config.json  detector.py  endpoint_fastapi.py  main.py  pyproject.toml
documentation/: architecture.md
tests/: test_api.py  test_comments.py  test_config.py  test_entropy.py  test_entropy_filter.py  test_integration.py  test_output.py  test_raw_extraction.py  test_request_page.py
tests/doc/: test_cases.docx  test_results.docx
